improve lottery drawing; improve player skill usage validation; partially fix, DoT effects and moaico; fix cloth equipment updating